[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Zelda_like_tileset/log.png" type="Texture" id=1]
[ext_resource path="res://Creatures/Enemies/TestEnemy.gd" type="Script" id=2]
[ext_resource path="res://CollisionBoxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionBoxes/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://CollisionBoxes/DetectionArea.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 19.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.0
height = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 111.018

[node name="TestEnemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
animation = "walk_down"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 6 )
collision_mask = 4
damage = 10
knockback = 500

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 6 )
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DetectionArea" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.431373 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource( 4 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]

[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="DetectionArea"]
